--- a/orders/orders.html
+++ b/orders/orders.html
@@ -113,7 +113,164 @@
       </div>
     </div>
     <div class="home-content">
-      <span class="text"> orders </span>
+      <h2 class="text-third-color font-semibold text-[20px]"> الطلبات </h2>
+      <form action="" class="w-100 my-5">
+        <div class="flex justify-between items-center flex-row flex-wrap w-100">
+          <div class="filter_items flex justify-start gap-4 items-center">
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> الحالة </label>
+              <select
+                name="class"
+                id="class"
+                class="form-select form-control !w-[200px]"
+                aria-label="Default select example"
+                aria-placeholder="Segmentation*"
+              >
+                <option selected disabled>الحالة </option>
+                <option value=""> تم التوصيل </option>
+                <option value=""> جاري الشحن </option>
+                <option value=""> تحت التجهيز </option>
+              </select>
+            </div>
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> البحث </label>
+              <input type="text" class="form-control !w-[200px] text-third-color font-semibold text-[14px]" placeholder="البحث">
+            </div>
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> تاريخ البداية </label>
+              <input type="date" class="form-control !w-[200px] text-third-color font-semibold text-[14px]" placeholder="تاريخ البداية">
+            </div>
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> تاريخ النهاية </label>
+              <input type="date" class="form-control !w-[200px] text-third-color font-semibold text-[14px]" placeholder="تاريخ النهاية">
+            </div>
+          </div>
+          <div class="filter_button">
+            <button class="bg-second-color text-primary-color py-[8px] px-[15px] rounded-[8px] w-[100px]"> فلتر </button>
+          </div>
+        </div>
+      </form>
+      <div class="table-responsive w-100">
+        <table class="table table-hover table-striped table-bordered">
+            <thead>
+              <tr>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">رقم الطلب</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">اسم العميل</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">السعر</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">طريقة الدفع</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">الحالة</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">إجراء</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    #8758658
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    محمد
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        150 ر.س
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    كاش
+                  </span>
+                </td>
+                <td>
+                  <span class="bg-primary-color text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                    تم التوصيل
+                </span>
+                </td>
+                <td>
+                   <a href="./order-list.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="24" height="24">
+                   </a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    #8758658
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    محمد
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        150 ر.س
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    كاش
+                  </span>
+                </td>
+                <td>
+                  <span class="bg-[#d79806] text-[#fff] font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                    تحت التجهيز
+                </span>
+                </td>
+                <td>
+                   <a href="./order-list.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="24" height="24">
+                   </a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    #8758658
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    محمد
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        150 ر.س
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    كاش
+                  </span>
+                </td>
+                <td>
+                  <span class="bg-second-color text-primary-color font-medium text-[15px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                    جاري الشحن
+                </span>
+                </td>
+                <td>
+                   <a href="./order-list.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="24" height="24">
+                   </a>
+                </td>
+              </tr>
+            </tbody>
+        </table>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link !text-third-color" href="#">السابق</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">1</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">2</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">3</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">التالي</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </section>
 
