--- a/products/products.html
+++ b/products/products.html
@@ -113,7 +113,175 @@
       </div>
     </div>
     <div class="home-content">
-      <span class="text"> products </span>
+      <h2 class="text-third-color font-semibold text-[20px]"> الطلبات </h2>
+      <form action="" class="w-100 my-5">
+        <div class="flex justify-between items-center flex-row flex-wrap w-100">
+          <div class="filter_items flex justify-start gap-4 items-center">
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> البحث </label>
+              <input type="text" class="form-control !w-[200px] text-third-color font-semibold text-[14px]" placeholder="البحث">
+            </div>
+            <div class="d-flex justify-content-start align-items-start flex-column gap-1">
+              <label for="" class="text-third-color font-semibold text-[14px] mb-2"> SKU </label>
+              <input type="text" class="form-control !w-[200px] text-third-color font-semibold text-[14px]" placeholder="SKU">
+            </div>
+          </div>
+          <div class="filter_button">
+            <button class="bg-second-color text-primary-color py-[8px] px-[15px] rounded-[8px] w-[100px]"> فلتر </button>
+          </div>
+        </div>
+      </form>
+      <div class="table-responsive w-100">
+        <table class="table table-hover table-striped table-bordered">
+            <thead>
+              <tr>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">صورة المنتج</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">اسم المنتج</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">SKU</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]"> الفئة </th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">السعر</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">إجراء</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    موبايل أيفون 15 برو ماكس , 512
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        HJHKG67FH5
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    أجهزة
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    20 ر.س
+                  </span>
+                </td>
+                <td class="flex justify-start items-center gap-2 !h-[110px]">
+                   <a href="./product-details.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <a href="./edit-product.html">
+                    <img src="../assets/images/edit.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <button class="border-0 outline-none">
+                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M21 5.97998C17.67 5.64998 14.32 5.47998 10.98 5.47998C9 5.47998 7.02 5.57998 5.04 5.77998L3 5.97998" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M8.5 4.97L8.72 3.66C8.88 2.71 9 2 10.69 2H13.31C15 2 15.13 2.75 15.28 3.67L15.5 4.97" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M18.8499 9.14001L18.1999 19.21C18.0899 20.78 17.9999 22 15.2099 22H8.7899C5.9999 22 5.9099 20.78 5.7999 19.21L5.1499 9.14001" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M10.3301 16.5H13.6601" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M9.5 12.5H14.5" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                   </button>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    موبايل أيفون 15 برو ماكس , 512
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        HJHKG67FH5
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    أجهزة
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    20 ر.س
+                  </span>
+                </td>
+                <td class="flex justify-start items-center gap-2 !h-[110px]">
+                   <a href="./product-details.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <a href="./edit-product.html">
+                    <img src="../assets/images/edit.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <button class="border-0 outline-none">
+                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M21 5.97998C17.67 5.64998 14.32 5.47998 10.98 5.47998C9 5.47998 7.02 5.57998 5.04 5.77998L3 5.97998" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M8.5 4.97L8.72 3.66C8.88 2.71 9 2 10.69 2H13.31C15 2 15.13 2.75 15.28 3.67L15.5 4.97" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M18.8499 9.14001L18.1999 19.21C18.0899 20.78 17.9999 22 15.2099 22H8.7899C5.9999 22 5.9099 20.78 5.7999 19.21L5.1499 9.14001" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M10.3301 16.5H13.6601" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M9.5 12.5H14.5" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                   </button>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    موبايل أيفون 15 برو ماكس , 512
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        HJHKG67FH5
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    أجهزة
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    20 ر.س
+                  </span>
+                </td>
+                <td class="flex justify-start items-center gap-2 !h-[110px]">
+                   <a href="./product-details.html">
+                    <img src="../assets/images/eye.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <a href="./edit-product.html">
+                    <img src="../assets/images/edit.svg" alt="eye" width="20" height="20">
+                   </a>
+                   <button class="border-0 outline-none">
+                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M21 5.97998C17.67 5.64998 14.32 5.47998 10.98 5.47998C9 5.47998 7.02 5.57998 5.04 5.77998L3 5.97998" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M8.5 4.97L8.72 3.66C8.88 2.71 9 2 10.69 2H13.31C15 2 15.13 2.75 15.28 3.67L15.5 4.97" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M18.8499 9.14001L18.1999 19.21C18.0899 20.78 17.9999 22 15.2099 22H8.7899C5.9999 22 5.9099 20.78 5.7999 19.21L5.1499 9.14001" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M10.3301 16.5H13.6601" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M9.5 12.5H14.5" stroke="red" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                   </button>
+                </td>
+              </tr>
+            </tbody>
+        </table>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link !text-third-color" href="#">السابق</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">1</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">2</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">3</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">التالي</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </section>
 
