--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -113,7 +113,130 @@
       </div>
     </div>
     <div class="home-content">
-      <span class="text"> products </span>
+      <h2 class="text-third-color font-semibold text-[20px] my-5"> التعليقات </h2>
+      <div class="table-responsive w-100">
+        <table class="table table-hover table-striped table-bordered">
+            <thead>
+              <tr>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">اسم العميل</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">رقم هاتف العميل</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">رقم الطلب</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]">التقييم</th>
+                <th scope="col" class="text-third-color font-semibold text-[14px]"> التعليق </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    احمد
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    0123456789
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        #76876098
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    <div class="stars flex justify-start items-center flex-row gap-1">
+                      <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-regular fa-star !text-white  text-[12px]"></i>
+                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص 
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    احمد
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    0123456789
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        #76876098
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    <div class="stars flex justify-start items-center flex-row gap-1">
+                      <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-regular fa-star !text-white  text-[12px]"></i>
+                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص 
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    احمد
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    0123456789
+                  </span>
+                </td>
+                <td>
+                    <span class="text-fourth-color font-medium text-[15px]"> 
+                        #76876098
+                    </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    <div class="stars flex justify-start items-center flex-row gap-1">
+                      <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                      <i class="fa-regular fa-star !text-white  text-[12px]"></i>
+                  </div>
+                  </span>
+                </td>
+                <td>
+                  <span class="text-fourth-color font-medium text-[15px]"> 
+                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص 
+                  </span>
+                </td>
+              </tr>
+            </tbody>
+        </table>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link !text-third-color" href="#">السابق</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">1</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">2</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">3</a></li>
+            <li class="page-item"><a class="page-link !text-third-color" href="#">التالي</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </section>
 
