--- a/orders/order-list.html
+++ b/orders/order-list.html
@@ -112,8 +112,197 @@
         </a>
       </div>
     </div>
-    <div class="home-content">
-      <span class="text"> orders </span>
+    <div class="home-content !bg-[#F9FAFB] max-h-max">
+      <h2 class="text-third-color font-semibold text-[20px] my-5"> تفاصيل الطلب </h2>
+      <div class="order-details flex justify-start items-start flex-row gap-2 w-100">
+          <div class="md:w-[50%] w-[100%]">
+            <div class="flex justify-between items-start flex-row p-4 w-100 bg-[#fff] rounded-[6px] mb-4">
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> رقم الطلب  </span>
+                <span class="text-fourth-color font-medium text-[14px]"> #6567567 </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> التاريخ </span>
+                <span class="text-fourth-color font-medium text-[14px]"> #6567567 </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> الإجمالي </span>
+                <span class="text-fourth-color font-medium text-[14px]"> 45 ر.س </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> الحالة </span>
+                <span class="bg-primary-color text-[#fff] font-medium text-[14px] py-[5px] px-[10px] rounded-[6px] max-sm:max-w-max max-sm:block">
+                    تم التوصيل
+                </span>
+              </div>
+            </div>
+            <div class="review_item mb-4 py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2 w-100 bg-[#fff]">
+              <div class="flex justify-between items-center flex-row flex-wrap w-100">
+                <h6 class="text-third-color font-semibold sm:text-[20px] text-[18px] mb-0"> أحمد يسري </h6>
+                <div class="stars flex justify-start items-center flex-row gap-1">
+                  <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                  <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                  <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                  <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                  <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                </div>
+              </div>
+              <span class="text-fourth-color sm:text-[13px] text-[12px] font-medium"> 27-11-2020 </span>
+              <p class="text-fourth-color sm:text-[16px] text-[15px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+            </div>
+          </div>
+          <div class="md:w-[50%] w-[100%]">
+            <div class="flex justify-between items-start flex-col gap-4 p-4 w-100 bg-[#fff] rounded-[6px] mb-4 w-50">
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> اسم العميل </span>
+                  <span class="text-fourth-color font-medium text-[14px]"> محمد احمد </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> رقم هاتف العميل </span>
+                  <span class="text-fourth-color font-medium text-[14px]"> 0123456789 </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> العنوان </span>
+                  <span class="text-fourth-color font-medium text-[14px]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء   </span>
+              </div>
+            </div>
+            <div class="flex justify-between items-start flex-col gap-4 p-4 w-100 bg-[#fff] rounded-[6px] mb-4 w-50">
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> طريقة الدفع </span>
+                  <span class="text-fourth-color font-medium text-[14px]"> كاش </span>
+              </div>
+              <div class="flex justify-start items-start flex-col gap-2">
+                <span class="text-third-color font-semibold text-[15px]"> حالة الدفع</span>
+                  <span class="text-fourth-color font-medium text-[14px]"> تم الدفع </span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="row w-100">
+          <div class="col-md-6">
+            <div class="table-responsive bg-[#fff] rounded-[8px]  mt-4">
+              <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col" class="text-third-color font-semibold text-[16px]">الصورة</th>
+                      <th scope="col" class="text-third-color font-semibold text-[16px]">المنتج</th>
+                      <th scope="col" class="text-third-color font-semibold text-[16px]">السعر</th>
+                      <th scope="col" class="text-third-color font-semibold text-[16px]">الكمية</th>
+                      <th scope="col" class="text-third-color font-semibold text-[16px]">الأجمالي</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                          <img src="../assets/images/product-d-4.jpg" alt="book" width="90" height="90">
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px]"> 
+                              موبايل أيفون 15 برو ماكس , 512GB
+                          </span> 
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px]"> 
+                              150 ر.س
+                          </span>
+                      </td>
+                      <td>
+                          <span>
+                              2
+                          </span>
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px]">
+                              100 ر.س
+                          </span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                          <img src="../assets/images/product-d-4.jpg" alt="book" width="90" height="90">
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px]"> 
+                              كتاب يحكي عن تاريخ الفلسفة الغربية
+                          </span> 
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px] w-100"> 
+                              150 ر.س
+                          </span>
+                      </td>
+                      <td>
+                          <span >
+                            1
+                          </span>
+                      </td>
+                      <td>
+                          <span class="text-fourth-color font-medium text-[15px]">
+                              100 ر.س
+                          </span>
+                      </td>
+                    </tr>
+                  </tbody>
+              </table>
+          </div>
+          </div>
+          <div class="col-md-6">
+            <div
+            class="order__summary  mt-4 bg-[#fff] py-[24px] px-[9px] sm:p-[32px] rounded-[12px] w-full flex justify-start items-start flex-col gap-[15px]"
+          >
+            <div class="flex justify-start flex-col gap-[16px] w-100">
+              <div class="flex justify-between items-center flex-row w-100">
+                <h3 class="text-third-color font-normal text-[14px] sm:text-[16px]">
+                  المجموع
+                </h3>
+                <p class="text-third-color font-bold text-[14px] sm:text-[16px]">
+                  100.99 ر.س
+                </p>
+              </div>
+              <div class="flex justify-between items-center flex-row w-100">
+                <h3 class="text-third-color font-normal text-[14px] sm:text-[16px]">
+                  رسوم الشحن
+                  </h3>
+                <p class="text-third-color font-bold text-[14px] sm:text-[16px]">
+                  40.00 ر.س
+                </p>
+              </div>
+            </div>
+            <hr class="bg-[#ebebeb] text-[#ebebeb] w-100" />
+            <div class="flex justify-start flex-col gap-[16px] w-100">
+              <div class="flex justify-between items-center flex-row w-100">
+                <h3 class="text-third-color font-semibold text-[14px] sm:text-[16px]">
+                  الأجمالي بدون الضريبة
+                </h3>
+                <p class="text-third-color font-bold text-[14px] sm:text-[16px]">
+                  100.99 ر.س
+                </p>
+              </div>
+              <div class="flex justify-between items-center flex-row w-100">
+                <h3 class="text-third-color font-normal text-[14px] sm:text-[16px]">
+                  15% القيمة المضافة
+                </h3>
+                <p class="text-third-color font-bold text-[14px] sm:text-[16px] mb-0">
+                  40.00 ر.س
+                </p>
+              </div>
+              <hr class="bg-[#ebebeb] text-[#ebebeb] w-100" />
+            </div>
+            <div class="flex justify-start flex-col gap-[12px] w-100">
+              <div class="flex justify-between items-center flex-row w-full">
+                <h3 class="text-third-color font-bold text-[16px] sm:text-[20px]">
+                  الأجمالي شامل الضريبة
+                </h3>
+                <p class="text-third-color font-bold text-[16px] sm:text-[20px]">
+                  1100.99 ر.س
+                </p>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
