--- a/products/products.html
+++ b/products/products.html
@@ -113,7 +113,10 @@
       </div>
     </div>
     <div class="home-content">
-      <h2 class="text-third-color font-semibold text-[20px]"> الطلبات </h2>
+      <div class="flex justify-between items-center flex-row w-100">
+        <h2 class="text-third-color font-semibold text-[20px]"> الطلبات </h2>
+        <a href="./add-product.html" class="bg-primary-color text-white py-[8px] px-[15px] rounded-[8px] w-[150px] flex justify-center items-center"> إضافة منتج </a>
+      </div>
       <form action="" class="w-100 my-5">
         <div class="flex justify-between items-center flex-row flex-wrap w-100">
           <div class="filter_items flex justify-start gap-4 items-center">
