--- a/home.html
+++ b/home.html
@@ -230,7 +230,7 @@
                 <tbody>
                   <tr>
                     <td>
-                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                      <img src="./assets/images/product-d-4.jpg" alt="" width="80" height="80">
                     </td>
                     <td>
                       <span class="text-fourth-color font-medium text-[15px]"> 
@@ -255,7 +255,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                      <img src="./assets/images/product-d-4.jpg" alt="" width="80" height="80">
                     </td>
                     <td>
                       <span class="text-fourth-color font-medium text-[15px]"> 
@@ -280,7 +280,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <img src="../assets/images/product-d-4.jpg" alt="" width="80" height="80">
+                      <img src="./assets/images/product-d-4.jpg" alt="" width="80" height="80">
                     </td>
                     <td>
                       <span class="text-fourth-color font-medium text-[15px]"> 
