--- a/products/products.html
+++ b/products/products.html
@@ -114,7 +114,7 @@
     </div>
     <div class="home-content">
       <div class="flex justify-between items-center flex-row w-100">
-        <h2 class="text-third-color font-semibold text-[20px]"> الطلبات </h2>
+        <h2 class="text-third-color font-semibold text-[20px]"> المنتجات </h2>
         <a href="./add-product.html" class="bg-primary-color text-white py-[8px] px-[15px] rounded-[8px] w-[150px] flex justify-center items-center"> إضافة منتج </a>
       </div>
       <form action="" class="w-100 my-5">
